part1/hashgenerator/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-service
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
  - port: 1234
    protocol: TCP
    targetPort: 3000
